# ConceptTrackr

./: Dockerfile  README.md  README_old.md  backend.Dockerfile  context_search.py  create-database.py  database_interface.py  docker-compose-dev.yml  docker-compose.yml  document_loader.py  environment.yml  occurrence-search.py  occurrence_script.py  occurrence_search.py  prompts.txt  run_backend.py  test.py  worker-requirements.txt
backend/: .env.example  api.Dockerfile  backend.Dockerfile  main.py  pyproject.toml  requirements.in  requirements.txt  requirements_bac.txt  tasks.py  worker.Dockerfile
backend/api/: celery_tasks.py  main.py  run_backend.py
backend/api/utils/: __init__.py
backend/app/utils/: gef_loader.py  response.py
concept_trackr/: __init__.py  concepttrackr.py
data/: download_files.py  idk.txt  magnet.txt
frontend/: app.vue  frontend.Dockerfile  nuxt.config.ts  package.json
gef_analyzr/: __init__.py  gefanalyzer.py
libraries/GEF-Analyzr/: pyproject.toml  setup.py
libraries/GEF-Analyzr/gef_analyzr/: __init__.py  gefanalyzer.py
libraries/GEF-Analyzr/gef_analyzr/databases/: qdrant.py
libraries/GEF-Analyzr/gef_analyzr/loaders/: pdf_loader.py
libraries/GEF-Analyzr/gef_analyzr/prompts/: gef_questions.py
libraries/GEF-Analyzr/gef_analyzr/search/: __init__.py  context_search.py  project_qa.py
libraries/GEF-Analyzr/gef_analyzr/utils/: __init__.py  gef_metadata.py
sample_outputs/: water-management-2-1000newtokens.txt  water-management.txt
scripts/: context_script.py  import_documents.py  occurrence_script.py  project_qa_script.py  (+1 more)
(+43 files in other folders)
